# daemon-admin

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.cursor/rules/: frontend.mdc  project-overview.mdc
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: health.py  servers.py  services.py
backend/app/models/: __init__.py  server.py  service.py
backend/app/schemas/: __init__.py  server.py  service.py
backend/app/services/: server_service.py  service_service.py  ssh_manager.py
backend/migrations/: env.py
backend/migrations/versions/: 2025_07_19_1435-8c6861bd13aa_create_servers_and_services_tables.py  2025_07_19_2009-1d0d6eb79a02_remove_ip_address_field_from_servers.py
frontend/: .dockerignore  .env.example  Dockerfile  nginx.conf  package.json  tsconfig.app.json
frontend/owleyes/: package.json  vite.config.ts
frontend/owleyes/src/: App.tsx
frontend/src/: App.tsx  index.css  main.tsx
memory-bank/: TODO.md  product-requirements.md  project-strucutre.md  tech-product-requirements.md
test-server/: .dockerignore  Dockerfile  Dockerfile.original  README.md  start-openrc.sh  start.sh
test-server/scripts/: api-server.py  background-worker.py  monitoring.py  web-app.py
test-server/services/: test-api-server.service  test-background-worker.service  test-monitoring.service  test-web-app.service
test-server/services-openrc/: test-api-server  test-background-worker  test-monitoring  test-web-app
(+46 files in other folders)
