[project]
name = "owleyes-backend"
version = "0.1.0"
description = "Owleyes - Linux server and systemd service management backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    
    # SSH integration
    "fabric>=3.2.2",
    "paramiko>=3.4.0",
    
    # Data validation and settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Security
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "bcrypt>=4.1.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "ruff>=0.12.4",
]
